# SwarmTorch

./: .gitignore  ADRs.md  CONTEXT_SOURCES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SWARM_TORCH_TECHNICAL_WHITE_PAPER_v0.1.md  SWARM_TORCH_TECHNICAL_WHITE_PAPER_v0.1.sources.md  deny.toml  readme.md
.github/workflows/: rust.yml
docs/plans/: v0.1.0-alpha.6x-backlog.md  v0.1.0-alpha.6x-remediation-backlog.md  v0.1.0-alpha.6x-remediation-id-map.md  v0.1.0-alpha.8x-phase2-remediation-roadmap.md
docs/release_notes/: M4-01_ed25519_signatures.md  M4-02.5_replay_protection_hardening.md  M4-02_replay_protection_enforcement.md  README.md  v0.1.0-alpha.1.md  v0.1.0-alpha.2.md  v0.1.0-alpha.3.md  v0.1.0-alpha.4.md  v0.1.0-alpha.5.md  v0.1.0-alpha.6.md  v0.1.0-alpha.6x-wave0.md  v0.1.0-alpha.6x-wave1.md  v0.1.0-alpha.6x-wave2.1.md  v0.1.0-alpha.6x-wave2.md  v0.1.0-alpha.6x-wave3.md  v0.1.0-alpha.6x-wave4.md  v0.1.0-alpha.6x-wave5.md  v0.1.0-alpha.6x-wave6.md  v0.1.0-alpha.6x.md  v0.1.0-alpha.7x-wave1.md  v0.1.0-alpha.7x.md  v0.1.0-alpha.8x-wave0.md  v0.1.0-alpha.8x-wave1.md
examples/: README.md
examples/compliance/audit-logs/: README.md
examples/compliance/federated-hospital/: README.md
examples/edge/continual-learning/: README.md
examples/edge/quantized-updates/: README.md
examples/embedded/: README.md
examples/embedded/esp32-contributor/: README.md
examples/privacy/dp-training/: README.md
examples/python/: README.md  swarm-notebook.ipynb
examples/python/model-zoo/: README.md
examples/robotics/fleet-policy/: README.md
examples/robotics/poisoning-demo/: README.md
examples/robotics/topology-bench/: README.md
supply-chain/: README.md  audits.toml  config.toml  exemption-rationale.md
swarm-torch/: Cargo.toml  README.md
swarm-torch-core/: Cargo.toml
swarm-torch-core/benches/: aggregation.rs  compression_topk.rs
swarm-torch-core/src/: aggregation.rs  algorithms.rs  compression.rs  consensus.rs  crypto.rs  dataops.rs  execution.rs  identity.rs  lib.rs  observe.rs  replay.rs  run_graph.rs  telemetry.rs  traits.rs
swarm-torch-core/tests/: robustness_harness.rs
swarm-torch-models/: Cargo.toml
swarm-torch-models/src/: burn_integration.rs  lib.rs  simple.rs
swarm-torch-net/: Cargo.toml
swarm-torch-net/src/: lib.rs  mock.rs  protocol.rs  traits.rs
swarm-torch-net/tests/: replay_integration.rs
swarm-torch-runtime/: Cargo.toml
swarm-torch-runtime/src/: lib.rs
swarm-torch/benches/: swarm_bench.rs
swarm-torch/examples/: artifact_pipeline.rs  hello_swarm.rs
swarm-torch/src/: artifacts.rs  lib.rs  native_runner.rs  report.rs  scheduler.rs
swarm-torch/src/artifacts/: bundle.rs  io.rs  mod.rs  session.rs  sink.rs  tests.rs
swarm-torch/src/report/: load.rs  mod.rs  model.rs  render.rs  tests.rs
