[package]
name = "swarm-torch-core"
description = "Core swarm learning algorithms and primitives - no_std compatible"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["swarm", "machine-learning", "no_std", "algorithms"]
categories = ["no-std", "science", "algorithms"]

[lib]
name = "swarm_torch_core"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["alloc", "serde/std", "postcard/use-std", "sha2/std"]
alloc = ["serde/alloc"]

# Robust aggregation algorithms
krum = []
bulyan = ["krum"]
trimmed-mean = []
robust-aggregation = ["krum", "bulyan", "trimmed-mean"]

# Telemetry
telemetry = ["tracing"]
defmt = ["dep:defmt"]

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
tracing = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }

# no_std compatible random
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
criterion = { workspace = true }
serde_json = "1.0"

[[bench]]
name = "aggregation"
harness = false
